syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "/proto";

service User{
  rpc GetInfo(GetRequest)returns(InfoResponse);
  rpc GetCreation(GetRequest)returns(CreationResponse);
  rpc Feedback(FeedbackRequest)returns(google.protobuf.Empty);
}

message GetRequest{
  string mobile = 1;
}

message InfoResponse{
  string nickname = 1;
  string motto = 2;
  string avatar = 3;
  string gender = 4;
  string birthday = 5;
  int64 likes = 6;
}

message UserCreation{
  string name = 1;
  string forWhat = 2;
  string creationTime =3;
  string lastModified = 4;
  string detail = 5;
  int32 status = 6;
  string mp3 = 7;
}

message CreationResponse{
  repeated UserCreation creation = 1;
}

message FeedbackRequest{
  string mobile = 1;
  string suspect = 2;
  string evidence = 3;
  string advice = 4;
  string avatar = 5;
  string nickname = 6;
}